# opencv-experiments

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  scan.cpp
